Lab1/1_cholesky/out_cholesky_175424.err
cholesky.c: In function ‘cholesky_openmp’:
cholesky.c:46:13: error: initializer expression refers to iteration variable ‘i’
     #pragma omp parallel for collapse(2)
             ^~~
cholesky.c:76:9: error: not enough perfectly nested loops before ‘tmp’
         tmp = 0.0;
         ^~~
cholesky.c:91:50: error: expected ‘;’ before ‘}’ token
             U[i][j] = ( A[j][i] - tmp ) / U[i][i]
                                                  ^
                                                  ;
         }
         ~                                         
cholesky.c:103:26: error: ‘collapse’ is not valid for ‘#pragma omp parallel’
     #pragma omp parallel collapse(4)
                          ^~~~~~~~
cholesky.c:122:13: error: expected ‘,’ or ‘;’ before ‘#pragma’
     #pragma omp parallel for collapse(6)
             ^~~
cholesky.c:123:30: error: expected ‘;’ before ‘)’ token
     for(k=0; k<n; k+=tilesize){
                              ^
                              ;
cholesky.c:123:30: error: expected statement before ‘)’ token
cholesky.c:142:26: error: ‘collapse’ is not valid for ‘#pragma omp parallel’
     #pragma omp parallel collapse(4)
                          ^~~~~~~~
cholesky.c:148:54: error: expected ‘;’ before ‘}’ token
                     if(sqrt(diff*diff) > 0.001) cnt++
                                                      ^
                                                      ;
                 }
                 ~                                     
cholesky.c: In function ‘cholesky’:
cholesky.c:245:22: error: expected ‘;’ before ‘for’
             tmp = 0.0
                      ^
                      ;
             for(k=0;k<i;k++) {
             ~~~       
cholesky.c:294:46: error: expected ‘;’ before ‘}’ token
             if(sqrt(diff*diff) > 0.001) cnt++
                                              ^
                                              ;
         }
         ~                                     
make: *** [Makefile:7: all] Error 1
